style.css
*{
    margin: 0;
    padding: 0;
    font-family: 'Raleway', sans-serif;
}
body{
    position: relative;
}
html{
    scroll-behavior: smooth;
}


ul{
    list-style: none;
}

#landing, #about, #project, #contact{
    height: 100vh;
}

/* Dark background color:#252934, Light Blue: #04c2c9, Pink: #e31b6d */

#about{
    position: relative;
}

#contact{

}

#landing{
    position: relative;
    background-color: #252934;
    color: white;
    font-size: 32pt;
    line-height: 36pt;
    text-align: center;
}

#projects{

}

.about-content{
    padding: 0px 20%;
    display: flex;
    flex-direction: column;
}




.active{
    color: #e31b6d;
    font-size: inherit;
    line-height: inherit;
}

.arrow{
    transition: 0.5s;
    fill: white;
    height: 20px;
    width: 20px;
    margin-left: 10px;
}


.btn-light{
    display: flex;
    justify-content: center;
    align-items: center;
    color: white;
    background-color: inherit;
    border: solid white 2px;
    text-decoration: none;
    margin-top: 10px;
    padding: 0px 5px 0px 5px;
    transition: 0.5s;
    cursor: pointer;
    font-size: 16pt;
}

.btn-light:hover{
    background-color: #04c2c9;
    border-color: #04c2c9;
}

.btn-light:hover .arrow{
    transform: rotate(90deg);
}

.canvas{
    z-index: 1;
    position: relative;
    left: 0;
    top: 0;
    height: 100%;
    width: 100%;
}

.contentHeader{
    text-align: center;
    color: #e31b6d;
    border-bottom: solid 3px #e31b6d;
}

.meContent{
    display: flex;
    align-items: center;
    justify-content: center;
}

.mePicture{
    flex: 1;
    height: 400px;
    border-radius: 10px;
    margin: 20px 20px 20px 0px;
}

.meParagraph{
    flex: 2;
    margin: 20px 0px 20px 20px;
    text-align: center;
    font-size: 16pt;
}

.name{
    color: #e31b6d;
}

.nav{
    background-color: #1b242f;
    border-bottom: solid 3px #04c2c9 ;
    width: 100%;
    font-size: 16pt;
    line-height: 18pt;
    padding: 10px 20%;
    color: white;
    top: 0;
    z-index: 99;
    transition: 0.5s;

}

.nav-list{
    display: flex;
    align-items: center;
    gap: 20px;
}

.nav-item{
    transition: 0.5s;
    text-decoration: none;
    color: inherit;
}

.nav-item:hover{
    color: #e31b6d;
}

.flex{
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
}

.landingText{
    z-index: 2;
    position: absolute;
    opacity: 1;
}

.overHidden{
    overflow-x: hidden;
}

.text-1{
    z-index: 2;
    position: absolute;
    font-size: inherit;
    line-height: inherit;
    opacity: 0;
}

.text-2{
    font-size: inherit;
    line-height: inherit;
    z-index: 2;
    opacity: 0;
}

.text-3{
    opacity: 0;
    background-color: #252934;
}

.tempBor{
    border: dotted red 2px;
}

.currentNav{
    color: #e31b6d; 
}

